--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 h1{
-    background-color:red;
+    background-color:rgb(223, 223, 223);
     text-align:center;
     font-weight:500;
     font-style: italic;
-    text-decoration: underline;
-    letter-spacing: 15px;
+    letter-spacing: 10px;
     font-size: 90px;
+    margin-right: -30px;
 }
 button{
     background-color:black;
-    color:honeydew;
+    color:red;
     font-size: 35px;
     display:block;
     margin: 0 auto;
